parslers-benchmark/src/tests/valid/array/arrayEmpty.wacc
# empty array declaration (seems to error currently)

# Output:
# #empty#

# Program:

begin
  int[] a = []
end

