parslers-benchmark/src/tests/invalid/syntaxErr/pairsExtended/invalidPairArray.wacc
# Check that arrays of just pair are syntactically invalid

begin
    pair(pair[], int) a = null
end